--- a/src/app/home.html
+++ b/src/app/home.html
@@ -13,6 +13,6 @@
     <h2 [class.textColor]="redTextSY == 'yes'">Red Text S Yes</h2>
     <h2 [class.textColor]="redTextSN == 'no'">Red Text S No</h2>
 
-    <button (click)="incrementCounter()">Increment 111</button>
+    <button (click)="incrementCounter()">Increment</button>
     <p>Counter: {{ counter }}</p>
 </main>
