--- a/src/app/home.html
+++ b/src/app/home.html
@@ -1,18 +1,33 @@
 <main class="main">
     <h1>Hello, {{ title }}</h1>
     <button type="button" [disabled]="isDisabled">{{ myBtn }}</button>
+
+    <!-- attr binding -->
     <img alt="angular" width="100" height="100" [src]="angularImage" />
 
+    <!-- style binding -->
     <div [style.backgroundColor]="bgColor">
         <h2 [style.color]="titleColor">{{ title }}</h2>
         <p [style]="description">Description</p>
     </div>
 
+    <!-- class binding -->
     <h2 [class.textColor]="redTextBF">Red Text B False</h2>
     <h2 [class.textColor]="redTextBT">Red Text B True</h2>
     <h2 [class.textColor]="redTextSY == 'yes'">Red Text S Yes</h2>
     <h2 [class.textColor]="redTextSN == 'no'">Red Text S No</h2>
 
+    <!-- interpolation -->
     <button (click)="incrementCounter()">Increment</button>
     <p>Counter: {{ counter }}</p>
+
+    <!-- FormsModule -->
+    <input type="text" [(ngModel)]="inputText" placeholder="Enter text"/>
+    <p>You entered: {{ inputText }}</p>
+
+    <!-- ngClass -->
+    <div [ngClass]="classes">{{ message }}</div>
+
+    <!-- ngStyle -->
+    <div class="color-box" [ngStyle]="{'background-color': selectedColor}">Box</div>
 </main>
