Dependency Injection and Services

--- a/src/app/home.html
+++ b/src/app/home.html
@@ -72,4 +72,9 @@
     <p>{{ currency | percent : "" }}</p>
 
     <h2>{{ title3 | append : "Custom" }}</h2>
+
+
+    <!-- ServicesDI -->
+    <h1>{{ title4 }}</h1>
+    <p>{{ messages2 }}</p>
 </main>
