--- a/src/app/home.html
+++ b/src/app/home.html
@@ -86,10 +86,42 @@
     <hr/>
     <h1>{{ title5 }}</h1>
     <div *ngFor = "let post of posts">
-        <div *ngIf="post.id <= 20">
+        <div *ngIf="post.id <= 10">
             <p>{{ post.id }}</p>
             <h3>{{ post.title }}</h3>
             <p>{{ post.body }}</p>
         </div>
+    </div>
+
+    <!-- Template Driven Forms -->
+    <hr/>
+    <h1>{{ title6 }}</h1>
+    <div>
+        <h2>User</h2>
+        <form #userForm="ngForm" (ngSubmit)="onSubmit(userForm)">
+            <div>
+                <label for="name">Name:</label>
+                <input 
+                    type="text"
+                    id="name"
+                    name="name"
+                    [(ngModel)]="user.name"
+                    required
+                />
+            </div>
+            <div>
+                <label for="email">Email:</label>
+                <input 
+                    type="text"
+                    id="email"
+                    name="email"
+                    [(ngModel)]="user.email"
+                    required
+                />
+            </div>
+            <div>
+                <button type="submit" [disabled]="userForm.invalid || !validateEmail()">Submit</button>
+            </div>
+        </form>
     </div>
 </main>
